deploy/devsandbox-dashboard/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rhdh
  namespace: ${DEVSANDBOX_DASHBOARD_NS}
  labels:
    app.kubernetes.io/instance: rhdh
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: rhdh
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: rhdh
    spec:
      restartPolicy: Always
      serviceAccountName: rhdh
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - name: backstage-backend
          args:
            - "--config"
            - dynamic-plugins-root/app-config.dynamic-plugins.yaml
            - "--config"
            - /opt/app-root/src/app-config-from-configmap.yaml
          ports:
            - name: backend
              containerPort: 7007
              protocol: TCP
          imagePullPolicy: Always
          image: "registry.redhat.io/rhdh/rhdh-hub-rhel9:1.5"
          resources:
            limits:
              cpu: "1"
              ephemeral-storage: 5Gi
              memory: 2560Mi
            requests:
              cpu: 250m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /.backstage/health/v1/readiness
              port: backend
              scheme: HTTP
            timeoutSeconds: 4
            periodSeconds: 10
            successThreshold: 2
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          livenessProbe:
            httpGet:
              path: /.backstage/health/v1/liveness
              port: backend
              scheme: HTTP
            timeoutSeconds: 4
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            httpGet:
              path: /.backstage/health/v1/liveness
              port: backend
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 4
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: backstage-app-config
              mountPath: /opt/app-root/src/app-config-from-configmap.yaml
              subPath: app-config.yaml
            - name: dynamic-plugins-root
              mountPath: /opt/app-root/src/dynamic-plugins-root
          terminationMessagePolicy: File
      serviceAccount: rhdh
      volumes:
        - name: dynamic-plugins-root
          emptyDir: {}
        - name: dynamic-plugins
          configMap:
            name: rhdh-dynamic-plugins
            defaultMode: 420
            optional: true
        - name: dynamic-plugins-npmrc
          secret:
            secretName: rhdh-dynamic-plugins-npmrc
            defaultMode: 420
            optional: true
        - name: dynamic-plugins-registry-auth
          secret:
            secretName: rhdh-dynamic-plugins-registry-auth
            defaultMode: 416
            optional: true
        - name: npmcacache
          emptyDir: {}
        - name: backstage-app-config
          configMap:
            name: rhdh-app-config
            defaultMode: 420
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
