deploy/devsandbox-dashboard/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rhdh
  namespace: ${DEVSANDBOX_DASHBOARD_NS}
  labels:
    app.kubernetes.io/instance: rhdh
spec:
  path: /
  to:
    kind: Service
    name: rhdh
    weight: 100
  port:
    targetPort: http-backend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
